--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/khaliy/textflow/issues"
   },
-  "homepage": "https://github.com/khaliy/textflow"
+  "homepage": "https://github.com/khaliy/textflow",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-contrib-uglify": "^0.8.0"
+  }
 }
